--- a/about.css
+++ b/about.css
@@ -2,7 +2,8 @@
     height:50px;
     float: left;
     position: relative;
-    margin-top: 7px
+    margin-top: 7px;
+    margin-bottom: 7px;
 }
 .nav-wrapper {
     background-color: rgb(129, 173, 173);
