--- a/assets/style.css
+++ b/assets/style.css
@@ -44,3 +44,13 @@ body{
    width: 33%;
 
 }
+
+body {
+   display: flex;
+   min-height: 100vh;
+   flex-direction: column;
+ }
+
+ main {
+   flex: 1 0 auto;
+ }
